Only delete the etcd_data_dir contents, not the actual folder
We require this because we mount a luks disc on /var/lib/etcd

--- a/roles/recover_control_plane/etcd/tasks/main.yml
+++ b/roles/recover_control_plane/etcd/tasks/main.yml
@@ -25,10 +25,8 @@
     - groups['broken_etcd']
     - not has_quorum
 
-- name: Remove etcd data dir
-  file:
-    path: "{{ etcd_data_dir }}"
-    state: absent
+- name: Empty etcd data dir
+  shell: rm -rf "{{ etcd_data_dir }}/*"
   delegate_to: "{{ item }}"
   with_items: "{{ groups['broken_etcd'] }}"
   when:
